--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -571,6 +571,9 @@ _{More to be added}_
 
 |=======================================================================
 
+[[mainstream-os]] Mainstream OS::
+Windows, Linux, Unix, OS-X
+
 [appendix]
 == Product Survey
 
